--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,8 +1,8 @@
 name: Update GitHub Stats
 on:
   schedule:
-    - cron: '0 12 * * *'  # Runs daily at 12:00 UTC
-  workflow_dispatch:       # Allows manual runs
+    - cron: '0 12 * * *'  # Daily at 12:00 UTC
+  workflow_dispatch:       # Manual trigger option
 
 jobs:
   update-stats:
@@ -11,22 +11,30 @@ jobs:
       contents: write      # Required to push changes
     
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Needed for git history
+          fetch-depth: 0   # Get complete git history
 
-      - name: Generate stats
-        uses: anuraghazra/github-readme-stats@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # Your PAT goes here
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          REPO_URL: https://github.com/supto11/supto11  # Your profile repo
+          node-version: '18'
 
-      - name: Commit and push
+      - name: Generate stats images
+        run: |
+          # Install the stats generator
+          npm install -g github-readme-stats
+          
+          # Generate stats images (saved to your repo)
+          github-readme-stats --username=supto11 --include-all-commits --count-private --theme=radical --output=./stats.svg
+          github-readme-stats --username=supto11 --top-langs --theme=radical --layout=compact --langs-count=6 --output=./top-langs.svg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Commit and push changes
         run: |
           git config user.name "Supto Purakayasto"
-          git config user.email "codersupto@gmail.com"
-          git add README.md
+          git config user.email "123456+supto11@users.noreply.github.com"
+          git add *.svg
           git commit -m "📈 Auto-update GitHub stats [skip ci]"
-          git push
