--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,40 +1,40 @@
-name: Update GitHub Stats
-on:
-  schedule:
-    - cron: '0 12 * * *'  # Daily at 12:00 UTC
-  workflow_dispatch:       # Manual trigger option
+# name: Update GitHub Stats
+# on:
+#   schedule:
+#     - cron: '0 12 * * *'  # Daily at 12:00 UTC
+#   workflow_dispatch:       # Manual trigger option
 
-jobs:
-  update-stats:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write      # Required to push changes
+# jobs:
+#   update-stats:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write      # Required to push changes
     
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # Get complete git history
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0   # Get complete git history
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '18'
 
-      - name: Generate stats images
-        run: |
-          # Install the stats generator
-          npm install -g github-readme-stats
+#       - name: Generate stats images
+#         run: |
+#           # Install the stats generator
+#           npm install -g github-readme-stats
           
-          # Generate stats images (saved to your repo)
-          github-readme-stats --username=supto11 --include-all-commits --count-private --theme=radical --output=./stats.svg
-          github-readme-stats --username=supto11 --top-langs --theme=radical --layout=compact --langs-count=6 --output=./top-langs.svg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+#           # Generate stats images (saved to your repo)
+#           github-readme-stats --username=supto11 --include-all-commits --count-private --theme=radical --output=./stats.svg
+#           github-readme-stats --username=supto11 --top-langs --theme=radical --layout=compact --langs-count=6 --output=./top-langs.svg
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Commit and push changes
-        run: |
-          git config user.name "Supto Purakayasto"
-          git config user.email "123456+supto11@users.noreply.github.com"
-          git add *.svg
-          git commit -m "📈 Auto-update GitHub stats [skip ci]"
+#       - name: Commit and push changes
+#         run: |
+#           git config user.name "Supto Purakayasto"
+#           git config user.email "123456+supto11@users.noreply.github.com"
+#           git add *.svg
+#           git commit -m "📈 Auto-update GitHub stats [skip ci]"
